--- a/lib/docker-test-runner/pom.xml
+++ b/lib/docker-test-runner/pom.xml
@@ -40,6 +40,7 @@
         <type-converter.version>1.0.0</type-converter.version>
         <testcontainers.version>1.11.2</testcontainers.version>
 
+        <logback.version>1.2.3</logback.version>
         <assertj-core.version>3.12.2</assertj-core.version>
         <junit.version>4.12</junit.version>
 
@@ -58,12 +59,6 @@
             <version>${kotlin.version}</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.github.docker-java/docker-java -->
-        <!--        <dependency>-->
-        <!--            <groupId>com.github.docker-java</groupId>-->
-        <!--            <artifactId>docker-java</artifactId>-->
-        <!--            <version>3.1.2</version>-->
-        <!--        </dependency>-->
         <dependency>
             <groupId>pl.beone.lib</groupId>
             <artifactId>type-converter</artifactId>
@@ -78,10 +73,9 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>${logback.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
