--- a/lib/docker-test-runner/src/docker/Dockerfile
+++ b/lib/docker-test-runner/src/docker/Dockerfile
@@ -2,6 +2,7 @@ FROM openjdk:11.0.3-jre-stretch
 
 RUN apt-get -y update && \
     apt-get -y upgrade && \
+    apt-get -y install maven && \
     apt-get -y clean
 
-${TRANFORMER-DOCKERFILE}
+${DOCKERFILE-FRAGMENT}
