--- a/lib/docker-test-runner/src/test/resources/base-docker-test.properties
+++ b/lib/docker-test-runner/src/test/resources/base-docker-test.properties
@@ -4,7 +4,7 @@ docker.test.image.name=
 docker.test.image.custom.enabled=true
 docker.test.image.custom.name=${artifactId}:test
 docker.test.image.custom.dockerfile.path=${basedir}/src/docker/Dockerfile
-docker.test.image.custom.dockerfile-transformer.path=${basedir}/src/main/resources/Dockerfile-transformer
+docker.test.image.custom.dockerfile-fragment.path=${basedir}/src/main/resources/Dockerfile-fragment
 docker.test.image.custom.deleteOnExit=false
 
 docker.test.m2.mount.enabled=true
