--- a/sdk/promena/promena-parent/pom.xml
+++ b/sdk/promena/promena-parent/pom.xml
@@ -10,7 +10,7 @@
         <version>2.1.3.RELEASE</version>
     </parent>
 
-    <groupId>pl.beone.promena</groupId>
+    <groupId>pl.beone.promena.sdk</groupId>
     <artifactId>promena-parent</artifactId>
     <version>3.0.0-alpha</version>
     <packaging>pom</packaging>
@@ -22,11 +22,13 @@
         <java.version>11</java.version>
 
         <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
-        <mockito-kotlin.version>2.1.0</mockito-kotlin.version>
+
+        <kryo.version>4.0.0</kryo.version>
         <akka.version>2.5.20</akka.version>
         <akka-kryo-serialization.version>0.5.2</akka-kryo-serialization.version>
-        <kryo.version>4.0.0</kryo.version>
         <kryo-serializers.version>0.45</kryo-serializers.version>
+
+        <mockito-kotlin.version>2.1.0</mockito-kotlin.version>
     </properties>
 
     <dependencyManagement>
