--- a/extension/connector/http/promena-connector-http-contract/pom.xml
+++ b/extension/connector/http/promena-connector-http-contract/pom.xml
@@ -9,20 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>promena-connector-http-internal</artifactId>
+    <artifactId>promena-connector-http-contract</artifactId>
     <version>3.0.0-alpha</version>
+
     <dependencies>
         <dependency>
             <groupId>pl.beone.promena.core</groupId>
-            <artifactId>promena-core-internal</artifactId>
-            <version>${promena-core.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>pl.beone.promena.connector</groupId>
-            <artifactId>promena-connector-http-contract</artifactId>
-            <version>${promena-connector-http.version}</version>
+            <artifactId>promena-core-contract</artifactId>
         </dependency>
     </dependencies>
-
-
 </project>
