--- a/extension/connector/http/promena-connector-http-integration-test/pom.xml
+++ b/extension/connector/http/promena-connector-http-integration-test/pom.xml
@@ -9,15 +9,20 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>promena-connector-http-contract</artifactId>
+    <artifactId>promena-connector-http-integration-test</artifactId>
     <version>3.0.0-alpha</version>
+
     <dependencies>
         <dependency>
-            <groupId>pl.beone.promena.core</groupId>
-            <artifactId>promena-core-contract</artifactId>
-            <version>${promena-core.version}</version>
+            <groupId>pl.beone.promena.connector</groupId>
+            <artifactId>promena-connector-http-configuration</artifactId>
+            <version>${promena-connector-http.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
-
-
 </project>
