--- a/extension/connector/http/promena-connector-http-internal/pom.xml
+++ b/extension/connector/http/promena-connector-http-internal/pom.xml
@@ -9,21 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>promena-connector-http-integration-test</artifactId>
+    <artifactId>promena-connector-http-internal</artifactId>
     <version>3.0.0-alpha</version>
 
     <dependencies>
         <dependency>
-            <groupId>pl.beone.promena.connector</groupId>
-            <artifactId>promena-connector-http-configuration</artifactId>
-            <version>${promena-connector-http.version}</version>
+            <groupId>pl.beone.promena.core</groupId>
+            <artifactId>promena-core-internal</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <version>${spring-boot.version}</version>
-            <scope>test</scope>
+            <groupId>pl.beone.promena.connector</groupId>
+            <artifactId>promena-connector-http-contract</artifactId>
+            <version>${promena-connector-http.version}</version>
         </dependency>
     </dependencies>
 </project>
