--- a/base/promena-executable/pom.xml
+++ b/base/promena-executable/pom.xml
@@ -8,7 +8,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.3.RELEASE</version>
-        <relativePath />
+        <relativePath/>
         <!-- lookup parent from repository -->
     </parent>
 
@@ -16,10 +16,9 @@
     <artifactId>promena-executable</artifactId>
     <version>3.0.0-alpha</version>
 
-    <name>[TS] Executable</name>
+    <name>Executable</name>
 
     <properties>
-        <kotlin.version>1.3.31</kotlin.version>
         <java.version>11</java.version>
 
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
@@ -27,27 +26,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-reflect</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-reflect</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <groupId>pl.beone.promena.core</groupId>
+            <artifactId>promena-core-configuration</artifactId>
+            <version>3.0.0-alpha</version>
         </dependency>
 
         <dependency>
@@ -56,10 +42,16 @@
             <version>3.0.0-alpha</version>
         </dependency>
 
+        <dependency>
+            <groupId>pl.beone.transformer</groupId>
+            <artifactId>appender-transformer-configuration</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <!--<dependency>-->
-            <!--<groupId>pl.beone.promena.communication</groupId>-->
-            <!--<artifactId>promena-communication-file-configuration</artifactId>-->
-            <!--<version>3.0.0-alpha</version>-->
+        <!--<groupId>pl.beone.promena.communication</groupId>-->
+        <!--<artifactId>promena-communication-file-configuration</artifactId>-->
+        <!--<version>3.0.0-alpha</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>pl.beone.promena.communication</groupId>
@@ -67,11 +59,6 @@
             <version>3.0.0-alpha</version>
         </dependency>
 
-        <dependency>
-            <groupId>pl.beone.promena.core</groupId>
-            <artifactId>promena-core-configuration</artifactId>
-            <version>3.0.0-alpha</version>
-        </dependency>
         <dependency>
             <groupId>pl.beone.promena.listener</groupId>
             <artifactId>promena-listener-cluster-member-configuration</artifactId>
@@ -91,56 +78,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-maven-plugin</artifactId>
-                <version>${kotlin.version}</version>
-                <configuration>
-                    <args>
-                        <arg>-Xjsr305=strict</arg>
-                    </args>
-                    <jvmTarget>${java.version}</jvmTarget>
-                    <compilerPlugins>
-                        <plugin>spring</plugin>
-                    </compilerPlugins>
-                </configuration>
-
-                <dependencies>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-maven-allopen</artifactId>
-                        <version>${kotlin.version}</version>
-                    </dependency>
-                </dependencies>
-
-                <executions>
-                    <execution>
-                        <id>compile</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <configuration>
-                            <sourceDirs>
-                                <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
-                                <sourceDir>${project.basedir}/src/main/java</sourceDir>
-                            </sourceDirs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>test-compile</id>
-                        <goals>
-                            <goal>test-compile</goal>
-                        </goals>
-                        <configuration>
-                            <sourceDirs>
-                                <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
-                                <sourceDir>${project.basedir}/src/test/java</sourceDir>
-                            </sourceDirs>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -183,13 +120,14 @@
                                     <resource>META-INF/spring.schemas</resource>
                                 </transformer>
                                 <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>pl.beone.promena.executable.Application</mainClass>
                                 </transformer>
 
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                     <resource>reference.conf</resource>
                                 </transformer>
                             </transformers>
@@ -199,6 +137,35 @@
                 <configuration>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>pl.beone.promena.maven.plugin</groupId>
+                <artifactId>promena-docker-maven-plugin</artifactId>
+                <version>1.0.0-alpha</version>
+
+                <configuration>
+                    <name>${project.artifactId}</name>
+                    <version>${project.version}</version>
+                </configuration>
+
+                <dependencies>
+                    <dependency>
+                        <groupId>pl.beone.transformer</groupId>
+                        <artifactId>appender-transformer</artifactId>
+                        <version>1.0.0</version>
+                    </dependency>
+                </dependencies>
+
+                <executions>
+                    <execution>
+                        <id>build</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
