--- a/extension/connector/http/delivery/promena-connector-http-delivery-http/pom.xml
+++ b/extension/connector/http/delivery/promena-connector-http-delivery-http/pom.xml
@@ -6,21 +6,32 @@
         <groupId>pl.beone.promena.connector</groupId>
         <artifactId>promena-connector-http</artifactId>
         <version>3.0.0-alpha</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>promena-connector-http-configuration</artifactId>
+    <artifactId>promena-connector-http-delivery-http</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>pl.beone.promena.connector</groupId>
-            <artifactId>promena-connector-http-delivery-http</artifactId>
-            <version>${promena-connector-http.version}</version>
+            <groupId>pl.beone.promena.core</groupId>
+            <artifactId>promena-core-internal</artifactId>
         </dependency>
         <dependency>
             <groupId>pl.beone.promena.connector</groupId>
-            <artifactId>promena-connector-http-internal</artifactId>
+            <artifactId>promena-connector-http-contract</artifactId>
             <version>${promena-connector-http.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 </project>
